@@ -162,6 +162,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(treefarm treefarm.cpp)
     DFHACK_PLUGIN(cleanconst cleanconst.cpp)
     DFHACK_PLUGIN(3dveins 3dveins.cpp)
+    DFHACK_PLUGIN(petcapRemover petcapRemover.cpp)
 endif()
 
 # this is the skeleton plugin. If you want to make your own, make a copy and then change it
